fixed nav button on smaller screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -187,6 +187,12 @@ p {
 Navbar
 ===============
 */
+.nav-header h3 {
+  text-align: center;
+  margin-top: auto;
+  margin-bottom: auto;
+  /* background: red; */
+}
 
 .nav-links {
   display: none;
